# jtbd-idea-validator-agent

./: .env.example  .gitignore  AGENTS.md  CONSOLIDATED_SECURITY_REPORT.md  README.md  SECURITY_ANALYSIS.md  SHORT_TERM_SECURITY_IMPLEMENTATION.md  TEST_RESULTS.md  pyproject.toml
Downloads/corpus-mlx/: COREPULSE_SUCCESS_SUMMARY.txt  README.md  agc_ads_pipeline.py  ascii_visual_proof.py  compare_sd_sdxl.py  convert_and_test_honey.py  corepulse_advanced.py  corepulse_applications.py  corepulse_efficient_demo.py  corepulse_final_showcase.py  corepulse_fixed_demo.py  corepulse_interface.py  corepulse_mega_demo.py  corepulse_mlx.py  corepulse_mlx_final.py  corepulse_mlx_integrated.py  corepulse_mlx_v2.py  corepulse_mlx_v3.py  corepulse_mlx_v4_plan.py  corepulse_mlx_v5_actual.py  corepulse_product_placement.py  corepulse_proper_fix.py  corepulse_rapid_fire.py  corepulse_stabilized.py  corepulse_video_logic.py  create_comparison.py  debug_cfg.py  debug_tokenizer.py  debug_unet.py  demo_corepulse.py  demo_injection.py  dogfood_analysis_v1.py  dogfood_analysis_v2.py  dogfood_analysis_v3.py  dogfood_honey_v3.py  dogfood_realistic_v3.py  examples_advanced.py  fixed_attention_hook.py  generate_comparison_demos.py  generate_full_corepulse_demos.py  (+53 more)
Downloads/idea/jtbd-agent/: README.md  pyproject.toml  run_direct.py
Downloads/tesseract-voice-ai/: LICENSE  README.md  README_MCP_GRAPHQL.md
Downloads/tesseract-voice-ai/apollo-mcp/: package.json  router.yaml  supergraph.yaml
Downloads/tesseract-voice-ai/frontend/: next.config.js  (+1 more)
ace-playbook/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
ace-playbook/.claude-flow/metrics/: system-metrics.json
ace-playbook/.specify/memory/: constitution.md
ace-playbook/.specify/memory/playbooks/: README.md
ace-playbook/.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
ace-playbook/ace/: __init__.py
ace-playbook/ace/curator/: __init__.py  curator_service.py  semantic_curator.py
ace-playbook/ace/models/: __init__.py  base.py  journal.py  playbook.py  reflection.py  task.py
ace-playbook/ace/repositories/: __init__.py  journal_repository.py  playbook_repository.py
ace-playbook/ace/utils/: __init__.py  database.py  embeddings.py  faiss_index.py  logging_config.py
ace-playbook/alembic/: env.py
ace-playbook/alembic/versions/: 4c0c6073b96e_initial_schema_with_all_tables.py
ace-playbook/tests/: conftest.py  test_curator_integration.py  test_performance.py  test_playbook_retrieval.py  test_semantic_curator.py  test_utils.py
contracts/: idea_v1.py  job_v1.py  validation_plan_v1.py
core/: export_gamma.py  pipeline.py  plan.py  score.py
data/: judge_train.jsonl
docs/: modaic_jtbd_agent_gist.md  modaic_jtbd_agent_playbook.md
examples/: insurance_photo_ai.json  rehab_exercise_tracking_rich.json
frontend/: app.js  index.html  styles.css
plugins/: llm_dspy.py
service/: agent_loader.py  captcha.py  dspy_sidecar.py  error_handling.py  fallback.py  logging_config.py  modaic_agent.py  monitoring.py  observability.py  openai_adapter.py  retrievers.py  tooling.py
tauri-jtbd/: README.md  package-lock.json  package.json
tauri-jtbd/src/: index.html  main.js  styles.css
tauri-jtbd/src-tauri/: Cargo.toml  tauri.conf.json
tests/: test_frontend.py  test_tooling.py
tools/: dogfood_remote_agent.py  modaic_jtbd_agent_demo.py  optimize_judge.py  push_modaic_agent.py  run_evaluations.py
utils/: cleanup_old.py
(+33 files in other folders)
